fix: product-name overflow

--- a/src/pages/Cart/style.scss
+++ b/src/pages/Cart/style.scss
@@ -81,6 +81,7 @@
                     display: flex;
                     height: 14vw;
                     width: 37vw;
+                    overflow: auto;
                 }
             }
         }
